<resources>
    <string name="app_name">Blood Donor</string>


    <!--Toolbar menus-->
    <string name="clear">Clear</string>
    <string name="cut">Cut</string>
    <string name="copy">Copy</string>
    <string name="paste">Paste</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>

    <!--Drawer-->
    <string name="open_drawer">Drawer Open</string>
    <string name="close_drawer">Drawer Close</string>

    <!--Drawer Menus-->
    <string name="about">About</string>
    <string name="logout">Logout</string>
    <string name="becomeDonor">Become a donor</string>
    <string name="addDonor">Add a donor</string>
    <string name="advanceSearch">Advance search</string>
    <string name="allRequestOfBlood">All request of blood</string>
    <string name="myAllRequestOfBlood">My all request of blood</string>
    <string name="newRequestForBlood">New request for blood</string>
    <!--App Message-->
    <string name="api_retry_error">Please retry!</string>
    <string name="api_default_error">Something wrong happened!</string>
    <string name="some_error">Some error occurred!</string>
    <string name="connection_error">Internet connection lost!</string>

    <!--Login-->
    <string name="login_dummy">Blood Donor Login</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgotPassword">Forgot Password?</string>


    <!--Sign up-->
    <string name="signup_text_title">Blood Donor Sign Up</string>
    <string name="signup_text">Sign up</string>
    <string name="signup_Name">Name</string>
    <string name="signup_email">Email</string>
    <string name="signup_phone">Phone No.</string>
    <string name="signup_Blood_Group">Blood Group</string>
    <string name="signup_Confirm_Email">A confirmation email send to your email. Please confirm the email before login.</string>

    <string name="signup_password">Password</string>
    <string name="signup_ConfirmPassword">Confirm Password</string>
    <string name="signup_DOB">Date of birth</string>
    <string name="signup_Gender">Gender</string>

    <string name="signup_privacy_policy">By clicking “Sign up”, you agree to our <a href="https://bigbarta.com/Home/PrivacyPolicy?applicationName=Blood%20Donor">privacy policy</a>. </string>

    <!--Forgot Password-->
    <string name="forgot_Password_text_title">Forgot your account’s password or having trouble logging into your account? Enter your email address and we’ll send you a recovery link.</string>
    <string name="forgot_Password_text">Send Recovery Email</string>
    <string name="forgot_Password_email_send_text">Account recovery email sent to</string>

    <!--Login Validation-->
    <string name="invalid_email_password">Please provide a valid email and password.</string>

    <string name="facebook_app_id">370874980143048</string>
    <string name="fb_login_protocol_scheme">fb370874980143048</string>


    <!--about fragment-->
    <string name="project_info">Big Barta Inc built the Blood Donor app as a Free app. This SERVICE is provided by Big Barta Inc at no cost and is intended for use as is.</string>
    <string name="link_termsofservice"><a href="https://www.bigbarta.com">Terms of service</a></string>
    <string name="link_privacypolicy"><a href="https://bigbarta.com/Home/PrivacyPolicy?applicationName=Blood%20Donor">Privacy policy</a></string>
    <string name="link_feedback">Drop your feedback at info@bigbarta.com</string>
    <string name="link_mindorks_repo">4. https://github.com/MindorksOpenSource</string>
    <string name="version">"version"</string>

    <!--rating dialog-->
    <string name="rate_us">Rate us</string>
    <string name="rating_message">Please let us know, how can we improve ourselves?</string>
    <string name="rating_play_store_redirect_message_line_1">Awesome! Thank you for the 5 stars.</string>
    <string name="rating_play_store_redirect_message_line_2">Please help others, in knowing some good things about this app.</string>
    <string name="rating_play_store_text">Rate us on Play Store</string>
    <string name="rating_not_provided_error">Please provide us stars.</string>
    <string name="rating_thanks">Thank you!</string>

    <!--play store-->
    <string name="app_google_play_store_link">"https://play.google.com/store/apps/details?id="</string>
    <string name="app_market_link">"market://details?id="</string>

    <!--button-->
    <string name="later">Later</string>
    <string name="cancel">Cancel</string>
    <string name="close">Close</string>
    <string name="submit">Submit</string>
    <string name="ok">Ok</string>
    <string name="clearFilter">Clear search criteria</string>
    <string name="redefineSearch">Redefine search</string>

    <!--RequestAndResponseForBlood-->
    <string name="titleRequestAndResponseForBlood">All Request of blood</string>
    <string name="requestForBloodTab">Request</string>
    <string name="responseForBloodTab">Response</string>

    <!--NewRequestForBlood-->
    <string name="titleNewRequestForBlood">New request for blood</string>


    <!--empty state-->
    <string name="empty_screen">We do not have anything\nhere right now.</string>
    <string name="empty_screen_blood_request">There is no request for blood yet.</string>
    <string name="empty_screen_blood_request_btn">Request for Blood</string>
    <string name="please_retry">Please Retry</string>
    <string name="retry">Retry</string>

    <!--Become Donor-->
    <string name="become_donor_title">Become a donor</string>
    <string name="add_new_donor">Add new donor</string>

    <string name="default_spinner_hint">Please select a value</string>


</resources>
