<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.sq.sohel.blooddonor.ui.main.advanceSearch.AdvanceSearchViewModel" />

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="4dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="16dp"
                android:paddingTop="30dp"
                android:paddingRight="16dp"
                android:paddingBottom="65dp">

                <TextView
                    android:id="@+id/contact_form_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/advanceSearch" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/tableRow1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="100dp"
                            android:layout_height="match_parent"
                            android:text="Blood group" />

                        <Spinner
                            android:id="@+id/txtBloodGroupAdvSrc"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:focusable="false"
                            android:text="@={viewModel.bloodType}"
                            app:entries="@{viewModel.bloodGroupList}" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView

                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:text="Address" />

                        <EditText
                            android:id="@+id/txtAddress"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:backgroundTint="@color/colorPrimaryDark"
                            android:hint="Address(optional)"
                            android:text="@={viewModel.address}" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/txtAddressDetect"
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:text="City" />

                        <EditText
                            android:id="@+id/txtCity"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:backgroundTint="@color/colorPrimaryDark"
                            android:hint="City(required)"
                            android:text="@={viewModel.city}" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:text="Country" />

                        <EditText
                            android:id="@+id/txtCountry"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:backgroundTint="@color/colorPrimaryDark"
                            android:hint="Country(required)"
                            android:text="@={viewModel.country}" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="64dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="Age between" />

                        <EditText
                            android:id="@+id/advanceSearchMinAge"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:backgroundTint="@color/colorPrimaryDark"
                            android:hint="Age"
                            android:inputType="number"
                            android:text="@={viewModel.minAge}" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="and" />

                        <EditText
                            android:id="@+id/advanceSearchMaxAge"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:backgroundTint="@color/colorPrimaryDark"
                            android:hint="Age"
                            android:inputType="number"
                            android:text="@={viewModel.maxAge}" />
                    </LinearLayout>

                    <LinearLayout
                        android:visibility="gone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Gender" />

                        <RadioGroup
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="horizontal">

                            <RadioButton
                                android:id="@+id/radio_gender_all"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:checked="true"
                                android:onClick="@{() -> viewModel.onGenderSelect(`A`)}"
                                android:text="All" />

                            <RadioButton
                                android:id="@+id/radio_gender_male"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:onClick="@{() -> viewModel.onGenderSelect(`M`)}"
                                android:text="Male" />

                            <RadioButton
                                android:id="@+id/radio_gender_female"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:onClick="@{() -> viewModel.onGenderSelect(`F`)}"
                                android:text="Female" />
                        </RadioGroup>

                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginTop="20dp">

                <Button
                    android:id="@+id/btnLater"
                    style="@style/Button.Action.Negative"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:onClick="@{() -> viewModel.onCancelClick()}"
                    android:text="@string/cancel" />

                <Button
                    android:id="@+id/btnSubmit"
                    style="@style/Button.Action.Positive"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:onClick="@{() -> viewModel.onSubmitClick()}"
                    android:text="@string/submit" />
            </RelativeLayout>
        </android.support.v7.widget.CardView>

    </RelativeLayout>

</layout>